--- a/templates/resetEmail.mustache
+++ b/templates/resetEmail.mustache
@@ -14,7 +14,7 @@
         <td>
           <table border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td bgcolor="#666666" style="padding: 12px 18px 12px 18px; border-radius:3px" align="center"><a href="https://karnevalist.se/resetpassword?{{resetPasswordHash}}" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; display: inline-block;">Reset password</a></td>
+              <td bgcolor="#666666" style="padding: 12px 18px 12px 18px; border-radius:3px" align="center"><a href="https://karnevalist.se/resetpassword/{{resetPasswordHash}}" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; display: inline-block;">Reset password</a></td>
             </tr>
           </table>
         </td>
