--- a/modules/mail/templates/hej.mustache
+++ b/modules/mail/templates/hej.mustache
@@ -2,7 +2,7 @@
   <table style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; background-color: #ffffff; max-width: 500px; margin-top: 20px; margin-right: auto; margin-left: auto; padding:20px;">
     <tbody>
       <tr>
-        <td><h2>Lundakarnevalen - reset password</h2></td>
+        <td><h2>Uppropsinformation</h2></td>
       </tr>
       <tr>
         <td>A password reset was requested for your account. If you didn't request this, please ignore this email.</td>
@@ -14,7 +14,7 @@
         <td>
           <table border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td bgcolor="#666666" style="padding: 12px 18px 12px 18px; border-radius:3px" align="center"><a href="https://karnevalist.se/resetpassword?{{resetPasswordHash}}" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; display: inline-block;">Reset password</a></td>
+              <td bgcolor="#666666" style="padding: 12px 18px 12px 18px; border-radius:3px" align="center"><a href="https://docs.google.com/forms/d/e/1FAIpQLScruTiOCD8D2F1ea5N9cKcsRcL28cIrGEcER1veS8PBAlo34w/viewform?usp=sf_link" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; display: inline-block;">Audition formulär</a></td>
             </tr>
           </table>
         </td>
