--- a/modules/mail/templates/infor_upprop.mustache
+++ b/modules/mail/templates/infor_upprop.mustache
@@ -1,8 +1,8 @@
-<body style="background-color: #f4f4f4; padding: 15px; font-family: 'Palatino' !important;">
+<body style="background-color: #FBBCC0; padding: 15px; font-family: 'Palatino' !important;">
   <table style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; background-color: #ffffff; max-width: 500px; margin-top: 20px; margin-right: auto; margin-left: auto; padding:20px;">
     <tbody>
       <tr>
-        <td><h2>Uppropsinformation</h2></td>
+        <td><h2 style="color: #8A4797;">Uppropsinformation</h2></td>
       </tr>
       <tr>
         <td><em style="font-size: 10px;">-- English below --</em></td>
@@ -16,19 +16,15 @@ Wehej! Här kommer en hälsning från Lundakarnevalens alla karnevalister!  Mail
       <tr><td>&nbsp;</td></tr>
       <tr>
         <td>
-<h3>Kön/Queue</h3>
+<h3 style="color: #8A4797;">Kön</h3>
 <ul style="padding-left: 15px;">
+
 <li>Tänk på att ha varma kläder!
-</li><li>Dress warmly!
 </li><li>Ta inte med möbler eller tält du inte snabbt kan flytta på (ex strandstol är jättebra). 
-</li><li>Do not bring furniture or tents you cannot move quickly. A portable beach chair is perfect!
 </li><li>Grilla inte i kön, det  är farligt (och Universitetet, Domkyrkan och Statens Fastighetsverk som äger marken i Lundagård gillar inte det). Hett tips är korv i termos!
-</li><li>No BBQ-ing in the Queue, it’s dangerous! We recommend hot dogs in thermos, a classic from our time in kindergarden! 
 </li><li>Det kommer att finnas bajamajor längs med kön! En tömd blåsa innan en ställer sig i kön är dock att rekommendera
-</li><li>There will be some portable toilets along the Queue. However, we recommend to not leave your home without emptying your bladder. 
 </li><li>Lundakarnevalens Snaxeri kommer sälja korv och kaffe framåt morgonkvisten! Planerar du att påbörja din resa mot karnevaliststatusen väldigt tidigt kan det därför vara en idé att ta med sig termos med korv, soppa, korvsoppa, kaffe m te eller något annat som floats and heats your boat. 
-</li><li>Karnevalist will be serving coffee and snax for a fair price during the morning. If you’re planning to start queuing very early, it might be a good idea to bring some snax and hot 
-</li><li>När du kommer in i Borgen så kommer du först att tas emot av ett glattgäng registreringskarnevalister. Där fortsätter just registreringen. Du kommer också att fotas för karnevalistkortet och lite längre fram kommer du att ha möjlighet att köpa biljett till Karneveljen (så länge de räcker).  Tänk på att ha ditt ID-kort framme, så att det ska gå så snabbt som möjligt! Därefter kilar du upp till Stora Salen, där alla sektioner väntar på att få träffa just dig och berätta varför deras sektion är roligast att karnevala i! När du hälsat på alla kan då nöjt ta dig hemåt och välja sektioner i lugn och ro. OBS att deadline för att välja sektioner är klockan 23:59 imorgon kväll. Vill du ändra din personliga information gör du det via webbsidan karnevalist.se!
+</li><li>När du kommer in i Borgen så kommer du först att tas emot av ett glatt gäng registreringskarnevalister. Här fortsätter just registreringen. Du kommer också att fotas för karnevalistkortet och lite längre fram kommer du att ha möjlighet att köpa biljett till Karneveljen (så länge de räcker).  Tänk på att ha ditt ID-kort framme, så att det ska gå så snabbt som möjligt! Därefter kilar du upp till Stora Salen, där alla sektioner väntar på att få träffa just dig och berätta varför deras sektion är roligast att karnevala i! När du hälsat på alla kan du nöjt ta dig hemåt och välja sektioner i lugn och ro. OBS att deadline för att välja sektioner är klockan 23:59 imorgon kväll. Vill du ändra din personliga information gör du det via webbsidan karnevalist.se!
 </li>
 </ul>
 
@@ -38,32 +34,24 @@ Wehej! Här kommer en hälsning från Lundakarnevalens alla karnevalister!  Mail
       <tr><td>&nbsp;</td></tr>
       <tr>
         <td>
-<h3>Fullmakt</h3>
-Har du fullmakt? Tänk på att den ska bestå av skriftlig information om att du har rätt att registrera din kompis, din kompis namnteckning, kopia på kompisens studentlundsmedlemsskap och ID-kort! 
+<h3 style="color: #8A4797;">Fullmakt</h3>
+Har du fullmakt åt en kompis som vill bli karnevalist? Tänk på att den ska bestå av skriftlig information om att du har rätt att registrera din kompis, din kompis namnteckning, kopia på kompisens studentlundsmedlemsskap och ID-kort! 
 
           </td>
       </tr>
       <tr><td>&nbsp;</td></tr>
       <tr>
         <td>
-<h3>Auditions</h3>
-<ul style="padding-left: 15px;">
-<li>Vill du göra auditions? Tänk på att du måste ha fyllt i det! Har du missat det eller ändrat dig, så kan du gå in på hemsidan karnevalist.se för att klicka i det. 
-</li><li>Auditions hålls nästa helg, dvs. 9-11 februari. Information kommer i ett utskick efter att du registrerat dig. 
-</li><li>Vill du göra auditions ska du dessutom fylla i ett formulär där du skriver i vilka nöjen du är intresserad av att vara med i samt vilka tider du är tillgänglig. Länken finns <a href="https://docs.google.com/forms/d/e/1FAIpQLScruTiOCD8D2F1ea5N9cKcsRcL28cIrGEcER1veS8PBAlo34w/viewform?usp=sf_link">här</a>. Deadline för att fylla i den är samma som sektionsvalet, dvs. kl. 23:59 söndag kväll! 
-</li>
-</ul>
+<h3 style="color: #8A4797;">Auditions</h3>
+Vill du göra auditions för att stå på scen, sjunga, spela instrument, göra cirkuskonster eller annat som är kul att visa upp? Tänk på att du måste ha fyllt i det! Har du missat det eller ändrat dig, så kan du gå in på hemsidan karnevalist.se för att klicka i det.  Auditions hålls nästa helg, dvs. 9-11 februari. Information kommer i ett utskick efter att du registrerat dig. Du måste dessutom fylla i ett formulär där du skriver i vilka nöjen du är intresserad av att vara med i samt vilka tider du är tillgänglig. Länken finns <a href="https://docs.google.com/forms/d/e/1FAIpQLScruTiOCD8D2F1ea5N9cKcsRcL28cIrGEcER1veS8PBAlo34w/viewform?usp=sf_link">här</a>. Deadline för att fylla i den är samma som sektionsvalet, dvs. kl. 23:59 söndag kväll! 
 
           </td>
       </tr>
       <tr><td>&nbsp;</td></tr>
       <tr>
         <td>
-<h3>Studentlundsmedlemsskapet!</h3>
-På grund av att det varit lite till och från med möjligheten att betala sitt Studenlundsmedlemsskap ska vi så klart göra det smidigaste av situationen!
-Alla som inte kommit åt att göra betala sitt Studentlundsmedlemskap kommer att kontrolleras senare, på onsdag den 7 februari!
-Se därför till att ändå göra betalningen under helgen ändå, så att du helt säkert finns med i Studentlunds medlemssregister till på onsdag.
-Kom ihåg att endast medlemmar i kår, nation och Akademiska Föreningen - det vill säga Studentlund - kan vara karnevalister!
+<h3 style="color: #8A4797;">Studentlundsmedlemsskapet!</h3>
+På grund av att det varit lite till och från med möjligheten att betala sitt Studenlundsmedlemsskap ska vi så klart göra det smidigaste av situationen! Alla som inte kommit åt att göra betala sitt Studentlundsmedlemskap kommer att kontrolleras senare, på onsdag den 7 februari! Se därför till att ändå göra betalningen under helgen ändå, så att du helt säkert finns med i Studentlunds medlemssregister till på onsdag. Kom ihåg att endast medlemmar i kår, nation och Akademiska Föreningen - det vill säga Studentlund - kan vara karnevalister.
 
 
           </td>
@@ -72,10 +60,51 @@ Kom ihåg att endast medlemmar i kår, nation och Akademiska Föreningen - det v
       <tr>
         <td>
 <h4>
-<b><em>English</em></b>
-<h4>
+<b><em style="color: #8A4797;">English</em></b>
+</h4>
 Wehej! This is a little hello from all karnevalists in Lundakarnevalen! This email contains general information regarding the Queue, proxys for friends who can’t be there themselves, auditions and how we’re dealing with the struggles with paying you’re memebership in Studentlund! Please note that the information will be in English right next to the Swedish one. 
 
+          </td>
+      </tr>
+      <tr><td>&nbsp;</td></tr>
+      <tr>
+        <td>
+<h3 style="color: #8A4797;">Queue</h3>
+<ul style="padding-left: 15px;">
+
+<li>Dress warmly!
+</li><li>Do not bring furniture or tents you cannot move quickly. A portable beach chair is perfect!
+</li><li>No BBQ-ing in the Queue, it’s dangerous! We recommend hot dogs in thermos, a classic from our time in kindergarden! 
+</li><li>There will be some portable toilets along the Queue. However, we recommend to not leave your home without emptying your bladder. 
+</li><li>Karnevalist will be serving coffee and snax for a fair price during the morning. If you’re planning to start queuing very early, it might be a good idea to bring some snax and hot beverages.
+</li><li>When inside AF-borgen, you’ll be greeted by registering karnevalists. Here, you’ll continue to complete your registration, have your photo taken and also to buy your ticket to Karneveljen (until they’re sold out).  Afterwards, you’ll go upstairs to the grand karneval fair where you’ll meet everyone. You’ll be able to ask questions and get information about what to do in Lundakarnevalen. When you are done mingling with everyone, you can go home and choose the sections you are most interested in in the app. N.B. that deadline for this choice is at 23:59 Sunday evening. If you want to change your personal information, you can do so at the webbsite karnevalist.se. 
+</li>
+
+</ul>
+          </td>
+      </tr>
+      <tr><td>&nbsp;</td></tr>
+      <tr>
+        <td>
+<h3 style="color: #8A4797;">Proxy</h3>
+Are you a proxy for a friend who wants to become a karnevalist? Remember, it have to have a written consent of you having the right to register your friend, the signature of your friend, a scanned copy of your friends membership in Studentlund and ID-card!
+
+          </td>
+      </tr>
+      <tr><td>&nbsp;</td></tr>
+      <tr>
+        <td>
+<h3 style="color: #8A4797;">Auditions</h3>
+Do you want to audition to be on stage, be in an orchestra, dance or something else? Remember to enter the check box for “I want to audition”! If you missed it in the app, you can change it at karnevalist.se. Auditions are held next weekend, 9th to 11th of February. You’ll get information in an email after the Upprop. You also have to fill out a form, where you write which Entertainments you are 
+
+
+          </td>
+      </tr>
+      <tr><td>&nbsp;</td></tr>
+      <tr>
+        <td>
+<h3 style="color: #8A4797;">Studentlundsmedlemsskapet! EJ KOMPLETT</h3>
+Due to the struggles many experienced with paying the membership to Studentlund, we want to do our best to facilitate for everyone! Everyone who hasn’t been able to make their payments to Studentlund, will be checked up later the coming week on Wednesday 7th February.  Remember that only members of a Student Union, Nation and Akademiska Föreningen - Studentlund, that is - are eligible for becoming a karnevalist! 
           </td>
       </tr>
       <tr><td>&nbsp;</td></tr>
